Mon Oct 16 14:48:54 PDT 2006 (adam)
	Added in Test Suite
	Created Catalyst::Action::Serialize and Catalyst::Action::Deserialize
	Added Data::Serializer actions
	Added status_created helper method

Wed Oct 18 17:29:07 PDT 2006 (adam)
	Added more status_ helpers

Thu Oct 19 16:04:33 PDT 2006 (adam)
	Converted error helpers to return an object instead of plain-text.  It's
	  a more consistent model than a text/plain error message.
	Added logging to 4xx status handlers
