@@ -1,4 +1,4 @@
-use inc::Module::Install 0.64;
+use inc::Module::Install;
 
 perl_version '5.8.1';
 
