@@ -1,7 +1,11 @@
 * Override setup_classes from Catalyst::Base, so things that use 
   C::Controller:REST don't need to have ActionClass('REST') on them
 
-* Document everything
+* More documentation of the Serialization/Deserialization process. 
+
+* More Serializers!
+
+* More status methods!
 
 * More tests
 
