@@ -68,4 +68,76 @@ sub execute {
     }
 }
 
+=head1 NAME
+
+Catalyst::Action::Deserialize - Deserialize Data in a Request
+
+=head1 SYNOPSIS
+
+    package Foo::Controller::Bar;
+
+    __PACKAGE__->config(
+        serialize => {
+            'default'   => 'YAML',
+            'stash_key' => 'rest',
+            'map'       => {
+                'text/x-yaml'        => 'YAML',
+                'text/x-data-dumper' => [ 'Data::Serializer', 'Data::Dumper' ],
+            },
+        }
+    );
+
+    sub begin : ActionClass('Deserialize') {}
+
+=head1 DESCRIPTION
+
+This action will deserialize HTTP POST, PUT, and OPTIONS requests.
+It assumes that the body of the HTTP Request is a serialized object.
+The serializer is selected by introspecting the requests content-type
+header.
+
+It requires that your Catalyst controller have a "serialize" entry
+in it's configuration.
+
+The specifics of deserializing each content-type is implemented as
+a plugin to L<Catalyst::Action::Deserialize>.  You can see a list
+of currently implemented plugins in L<Catalyst::Controller::REST>.
+
+The results of your Deserializing will wind up in $c->req->data.
+This is done through the magic of L<Catalyst::Request::REST>.
+
+=head1 CONFIGURATION
+
+=over 4
+
+=item default
+
+The default Serialization format.  See the next section for
+available options.
+
+=item map
+
+Takes a hashref, mapping Content-Types to a given plugin.
+
+=back
+
+=head1 SEE ALSO
+
+You likely want to look at L<Catalyst::Controller::REST>, which implements
+a sensible set of defaults for a controller doing REST.
+
+L<Catalyst::Action::Serialize>, L<Catalyst::Action::REST>
+
+=head1 AUTHOR
+
+Adam Jacob <adam@stalecoffee.org>, with lots of help from mst and jrockway
+
+Marchex, Inc. paid me while I developed this module.  (http://www.marchex.com)
+
+=head1 LICENSE
+
+You may distribute this code under the same terms as Perl itself.
+
+=cut
+
 1;
