@@ -75,3 +75,74 @@ sub execute {
 }
 
 1;
+
+=head1 NAME
+
+Catalyst::Action::Serialize - Serialize Data in a Response
+
+=head1 SYNOPSIS
+
+    package Foo::Controller::Bar;
+
+    __PACKAGE__->config(
+        serialize => {
+            'default'   => 'YAML',
+            'stash_key' => 'rest',
+            'map'       => {
+                'text/x-yaml'        => 'YAML',
+                'text/x-data-dumper' => [ 'Data::Serializer', 'Data::Dumper' ],
+            },
+        }
+    );
+
+    sub end : ActionClass('Serialize') {}
+
+=head1 DESCRIPTION
+
+This action will serialize the body of an HTTP Response.  The serializer is
+selected by introspecting the requests content-type header.
+
+It requires that your Catalyst controller have a "serialize" entry
+in it's configuration.
+
+The specifics of serializing each content-type is implemented as
+a plugin to L<Catalyst::Action::Serialize>.
+
+=head1 CONFIGURATION
+
+=over 4
+
+=item default
+
+The default Serialization format.  See the next section for
+available options.  This is used if a requested content-type
+is not recognized.
+
+=item stash_key 
+
+Where in the stash the data you want serialized lives.
+
+=item map
+
+Takes a hashref, mapping Content-Types to a given plugin.
+
+=back
+
+=head1 SEE ALSO
+
+You likely want to look at L<Catalyst::Controller::REST>, which implements
+a sensible set of defaults for a controller doing REST.
+
+L<Catalyst::Action::Deserialize>, L<Catalyst::Action::REST>
+
+=head1 AUTHOR
+
+Adam Jacob <adam@stalecoffee.org>, with lots of help from mst and jrockway
+
+Marchex, Inc. paid me while I developed this module.  (http://www.marchex.com)
+
+=head1 LICENSE
+
+You may distribute this code under the same terms as Perl itself.
+
+=cut
